# cmake_example

./: CMakeLists.txt
src/: main.cpp
tests/: test.py
